kubernetes-networks/canary/canary-inrgess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-weight: "20"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web.app
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: svc-canary
            port: 
              number: 8000
